# eval-harness

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  handoff.md  pyproject.toml
examples/: evals.yaml
src/eval_harness/: __init__.py  __main__.py  cli.py  config.py  differ.py  dotpath.py  llm.py  models.py  reporter.py  runner.py  storage.py
src/eval_harness/adapters/: __init__.py  jsonl.py
src/eval_harness/evaluators/: __init__.py  base.py  llm_judge.py  threshold.py  trajectory.py
tests/: test_differ.py  test_jsonl_adapter.py  test_llm_judge.py  test_reporter.py  test_runner.py  test_storage.py  test_threshold.py  test_trajectory.py
tests/fixtures/: traces.jsonl
