[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-harness"
version = "0.1.0"
description = "Framework-agnostic LLM agent trace eval harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/eval_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
