[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-harness"
version = "0.1.0"
description = "Framework-agnostic LLM agent trace eval harness"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6",
    "anthropic>=0.39",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]   # only needed for OpenAI-compatible llm_judge providers
dev = ["pytest"]

[project.scripts]
eval-harness = "eval_harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eval_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
